--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "next": "16.1.5",
     "pino": "^10.3.0",
+    "pino-pretty": "^13.1.3",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
