--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-config-next": "16.1.5",
     "husky": "^9.1.7",
     "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
     "lint-staged": "^16.2.7",
     "prettier": "^3.8.1",
     "tailwindcss": "^4",
